# solance-kiro

./: .gitignore  LICENSE  README.md
.kiro/specs/nextjs-frontend/: design.md  requirements.md  tasks.md
.kiro/specs/solance-api/: design.md  requirements.md  tasks.md
backend/: .dockerignore  .env  Dockerfile  README.md  api.py  content.json  main.py  pyproject.toml  requirements.txt  test_api.sh  test_studio.py  test_studio_api.sh
backend/src/api/: __init__.py  models.py
backend/src/api/endpoints/: __init__.py  grading.py  questions.py  steps.py  studio.py  subjects.py
backend/src/database/: gene_question.py  subject_insert_api.py  subjects_retrieve_api.py  user_questions.py
backend/src/question_generation/: main.py  question_prompt.py
backend/src/solo_mode/: main.py  solo_mode_prompt.py
backend/src/steps_generation/: main.py  steps_prompt_generator.py
backend/src/studio/: main.py  studio_prompt.py
backend/src/test/: retrieve.py
frontend/: API_INTEGRATION.md  PROJECT_STRUCTURE.md  README.md  homepage.html  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ApiErrorDisplay.tsx  ApiFallback.tsx  BlockInterface.tsx  ChatInterface.tsx  CozySuccessModal.tsx  ErrorBoundary.tsx  FloatingBlobs.tsx  HomePage.tsx  InputArea.tsx  LoadingSpinner.tsx  MathRenderer.tsx  Navigation.tsx  ProblemHeader.tsx  SolanceHeader.tsx  SubjectCard.tsx  SuccessModal.tsx  TopicInput.tsx  TopicTags.tsx  index.ts
frontend/src/contexts/: ModelModeContext.tsx  ThemeContext.tsx  (+1 more)
(+35 files in other folders)
